Bug 1565998 - display a descriptive text for local file: related data, and allow removing it, r=johannh,fluent-reviewers,flod,baku

Differential Revision: https://phabricator.services.mozilla.com/D44832