browser/components/preferences/siteDataSettings.js
@@ -61,7 +61,10 @@ let gSiteDataSettings = {
     }
 
     // Add "Host" column.
-    addColumnItem({ raw: site.host }, "4");
+    let hostData = site.host
+      ? { raw: site.host }
+      : { id: "site-data-local-file-host" };
+    addColumnItem(hostData, "4");
 
     // Add "Cookies" column.
     addColumnItem({ raw: site.cookies.length }, "1");
