browser/modules/SiteDataManager.jsm
@@ -463,24 +463,31 @@ var SiteDataManager = {
     let perms = this._getDeletablePermissions();
     let promises = [];
     for (let host of hosts) {
+      const kFlags =
+        Ci.nsIClearDataService.CLEAR_COOKIES |
+        Ci.nsIClearDataService.CLEAR_DOM_STORAGES |
+        Ci.nsIClearDataService.CLEAR_SECURITY_SETTINGS |
+        Ci.nsIClearDataService.CLEAR_PLUGIN_DATA |
+        Ci.nsIClearDataService.CLEAR_EME |
+        Ci.nsIClearDataService.CLEAR_ALL_CACHES;
       promises.push(
         new Promise(function(resolve) {
-          Services.clearData.deleteDataFromHost(
-            host,
-            true,
-            Ci.nsIClearDataService.CLEAR_COOKIES |
-              Ci.nsIClearDataService.CLEAR_DOM_STORAGES |
-              Ci.nsIClearDataService.CLEAR_SECURITY_SETTINGS |
-              Ci.nsIClearDataService.CLEAR_PLUGIN_DATA |
-              Ci.nsIClearDataService.CLEAR_EME |
-              Ci.nsIClearDataService.CLEAR_ALL_CACHES,
-            resolve
-          );
+          const { clearData } = Services;
+          if (host) {
+            clearData.deleteDataFromHost(host, true, kFlags, resolve);
+          } else {
+            clearData.deleteDataFromLocalFiles(true, kFlags, resolve);
+          }
         })
       );
 
       for (let perm of perms) {
-        if (Services.eTLD.hasRootDomain(perm.principal.URI.host, host)) {
+        // Specialcase local file permissions.
+        if (!host) {
+          if (perm.principal.URI.schemeIs("file")) {
+            Services.perms.removePermission(perm);
+          }
+        } else if (Services.eTLD.hasRootDomain(perm.principal.URI.host, host)) {
           Services.perms.removePermission(perm);
         }
       }
