toolkit/components/cleardata/ClearDataService.jsm
@@ -31,7 +31,7 @@ XPCOMUtils.defineLazyServiceGetter(
   "nsITrackingDBService"
 );
 
-// A Cleaner is an object with 3 methods. These methods must return a Promise
+// A Cleaner is an object with 4 methods. These methods must return a Promise
 // object. Here a description of these methods:
 // * deleteAll() - this method _must_ exist. When called, it deletes all the
 //                 data owned by the cleaner.
@@ -41,12 +41,27 @@ XPCOMUtils.defineLazyServiceGetter(
 // * deleteByHost() - this method is implemented only if the cleaner knows
 //                    how to delete data by host + originAttributes pattern. If
 //                    not implemented, deleteAll() will be used as fallback.
-// *deleteByRange() - this method is implemented only if the cleaner knows how
+// * deleteByRange() - this method is implemented only if the cleaner knows how
 //                    to delete data by time range. It receives 2 time range
 //                    parameters: aFrom/aTo. If not implemented, deleteAll() is
 //                    used as fallback.
+// * deleteByLocalFiles() - this method removes data held for local files and
+//                          other hostless origins. If not implemented,
+//                          **no fallback is used**, as for a number of
+//                          cleaners, no such data will ever exist and
+//                          therefore clearing it does not make sense.
 
 const CookieCleaner = {
+  deleteByLocalFiles(aOriginAttributes) {
+    return new Promise(aResolve => {
+      Services.cookies.removeCookiesFromExactHost(
+        "",
+        JSON.stringify(aOriginAttributes)
+      );
+      aResolve();
+    });
+  },
+
   deleteByHost(aHost, aOriginAttributes) {
     return new Promise(aResolve => {
       Services.cookies.removeCookiesFromExactHost(
@@ -1098,6 +1113,22 @@ ClearDataService.prototype = Object.freeze({
     if (!Services.qms) {
       Cu.reportError("Failed initializiation of QuotaManagerService.");
     }
+  },
+
+  deleteDataFromLocalFiles(aIsUserRequest, aFlags, aCallback) {
+    if (!aCallback) {
+      return Cr.NS_ERROR_INVALID_ARG;
+    }
+
+    return this._deleteInternal(aFlags, aCallback, aCleaner => {
+      // Some of the 'Cleaners' do not support clearing data for
+      // local files. Ignore those.
+      if (aCleaner.deleteByLocalFiles) {
+        // A generic originAttributes dictionary.
+        return aCleaner.deleteByLocalFiles({});
+      }
+      return Promise.resolve();
+    });
   },
 
   deleteDataFromHost(aHost, aIsUserRequest, aFlags, aCallback) {
