toolkit/components/cleardata/tests/unit/test_cookies.js
@@ -139,3 +139,30 @@ add_task(async function test_principal_cookies() {
 
   Assert.equal(Services.cookies.countCookiesFromHost("example.net"), 0);
 });
+
+add_task(async function test_localfile_cookies() {
+  const expiry = Date.now() + 24 * 60 * 60;
+  Services.cookies.add(
+    "", // local file
+    "path",
+    "name",
+    "value",
+    false /* secure */,
+    false /* http only */,
+    false /* session */,
+    expiry,
+    {},
+    Ci.nsICookie.SAMESITE_NONE
+  );
+
+  Assert.notEqual(Services.cookies.countCookiesFromHost(""), 0);
+
+  await new Promise(aResolve => {
+    Services.clearData.deleteDataFromLocalFiles(
+      true,
+      Ci.nsIClearDataService.CLEAR_COOKIES,
+      aResolve
+    );
+  });
+  Assert.equal(Services.cookies.countCookiesFromHost(""), 0);
+});
